[package]
name = "test_utils"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true

[package.metadata.release]
release = false

[dependencies]
delta_kernel = { path = "../kernel" }
delta-kernel-engine = { path = "../delta-kernel-engine", features = [ "arrow-55" ] }
itertools = "0.14.0"
