[package]
name = "test_utils"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true

# for cargo-release
[package.metadata.release]
release = false

[dependencies]
delta_kernel = { path = "../kernel", features = [ "default-engine-rustls", "arrow" ] }
object_store = "0.12.3"
itertools = "0.14.0"
serde_json = "1.0.142"
tar = "0.4"
tempfile = "3"
url = { version = "2.5.4", features = ["serde"] }
zstd = "0.13"
serde = { version = "1.0.219", features = ["derive"] }
url_serde = "0.2.0"
sqlparser = { version = "0.58.0", features = ["serde"] }
