[package]
name = "test_utils"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true

# for cargo-release
[package.metadata.release]
release = false

[features]
default = ["arrow"]
arrow = ["arrow-57"]
arrow-57 = ["delta_kernel/arrow-57"]
arrow-56 = ["delta_kernel/arrow-56"]

[dependencies]
# NOTE: We MUST build with SOME arrow version (or compilation would fail). So we pull in `arrow-56`,
# which ensures `cargo build` succeeds. But we ALSO default to `arrow`, which activates `arrow-57`
# and overrides `arrow-56`.
delta_kernel = { path = "../kernel", features = [ "default-engine-rustls", "arrow-56", "internal-api", "prettyprint" ] }
itertools = "0.14.0"
serde_json = "1.0.142"
tar = "0.4"
tempfile = "3"
url = "2.5.4"
uuid = { version = "1", features = ["v4"] }
zstd = "0.13"
tokio = "1.49.0"
# only for structured logging
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }
