[package]
name = "delta-kernel-unity-catalog"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

# for cargo-release
[package.metadata.release]
release = false

[dependencies]
delta_kernel = { path = "../kernel", features = ["catalog-managed"] }
unitycatalog-client-api = { path = "../unitycatalog-client-api" }
itertools = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
delta_kernel = { path = "../kernel", features = ["arrow-56", "default-engine-rustls", "catalog-managed", "test-utils", "internal-api"] }
uc-client = { path = "../uc-client", features = ["test-utils"] }
unitycatalog-client-api = { path = "../unitycatalog-client-api", features = ["test-utils"] }
tempfile = "3"
