[package]
name = "uc-catalog"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

# for cargo-release
[package.metadata.release]
release = false

[features]
default = ["arrow"]
arrow = ["arrow-57"]
arrow-57 = ["delta_kernel/arrow-57"]
arrow-56 = ["delta_kernel/arrow-56"]

[dependencies]
delta_kernel = { path = "../kernel", features = ["catalog-managed"] }
uc-client = { path = "../uc-client" }
itertools = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
delta_kernel = { path = "../kernel", features = ["default-engine-rustls", "catalog-managed", "test-utils", "internal-api"] }
uc-client = { path = "../uc-client", features = ["test-utils"] }
tempfile = "3"
