[package]
name = "unity-catalog-delta-client-api"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

# for cargo-release
[package.metadata.release]
release = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[features]
default = []
test-utils = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
