[package]
name = "unity-catalog-delta-rest-client"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

# for cargo-release
[package.metadata.release]
release = false

[dependencies]
unity-catalog-delta-client-api = { path = "../unity-catalog-delta-client-api" }
# Hardcodes rustls (always used alongside default-engine-rustls in practice).
reqwest = { version = "0.13", default-features = false, features = ["charset", "http2", "json", "rustls", "system-proxy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
tracing = "0.1"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
test-utils = ["unity-catalog-delta-client-api/test-utils"]

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
