[package]
name = "delta_kernel_workloads"
publish = false
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

# for cargo-release
[package.metadata.release]
release = false

[features]
default = ["arrow"]
arrow = ["arrow-58"]
arrow-58 = ["delta_kernel/arrow-58"]
arrow-57 = ["delta_kernel/arrow-57"]

[dependencies]
delta_kernel = { path = "../kernel", features = ["internal-api"] }
itertools = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = "0.55"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
rstest = "0.23"
